Fix homepage legibility

--- a/src/components/home/css/ourexpertise.css
+++ b/src/components/home/css/ourexpertise.css
@@ -98,33 +98,35 @@
     }
 
     .rectangle {
-        width: 296px;
-        height: 52px;
+        width: 345px;
+        height: 160px;
         flex-shrink: 0;
-        border-radius: 7.8px;
+        border-radius: 20px;
         padding-left: 0px;
         padding-right: 0px;
     }
 
     .whatwedo-icon {
         margin: 6px 0px 0px 16px !important;
-        width: 20px;
-        height: 12px;
+        width: 53px;
+        height: 50px;
         padding-right: 9px !important;
     }
 
     .whatwedo-title {
         margin-top: 6px !important;
-        font-size: 7.3px;
+        font-size: 18px;
         line-height: 14px;
         padding-left: 0px !important;
         vertical-align: middle;
         margin-bottom: 3px !important;
+        padding-top:17px;
+        width: 152px;
     }
 
     .whatwedo-text {
-        font-size: 4.8px;
-        line-height: 7.6px;
+        font-size: 11px;
+        line-height: 15px;
         width: 278px;
         /* height: 105px; */
         padding-right: 42px;
